redesigned landing page

--- a/src/app/pages/home/home/home.html
+++ b/src/app/pages/home/home/home.html
@@ -1,6 +1,7 @@
 <div class="overflow-x-hidden overflow-y-auto">
   <app-landing (navigateSection)="scrollTo($event)" id="top"></app-landing>
   <app-features id="features"></app-features>
+  <app-team id="team"></app-team>
   <app-pricing id="pricing"></app-pricing>
   <app-contact (navigateSection)="scrollTo($event)" id="contact"></app-contact>
 </div>
