--- a/src/app/pages/home/pricing/pricing.html
+++ b/src/app/pages/home/pricing/pricing.html
@@ -1,10 +1,10 @@
 <!-- Price Tier Description Header -->
 <section class="bg-gray-50 py-12 sm:py-16 md:py-24">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center">
-    <h2 class="mx-auto max-w-xl font-normal text-center text-2xl sm:text-3xl md:text-[40px] leading-snug md:leading-[48px] text-[#264653]">
-      Simple, Flexible Plans for <span class="font-light italic">Every</span> Learner
+    <h2 class="mx-auto max-w-xl font-medium text-center text-2xl sm:text-3xl md:text-[40px] leading-snug md:leading-[48px] text-gray-800 tracking-tighter">
+      Simple, Flexible Plans for <span class="font-light italic text-[#264653]">Every</span> Learner
     </h2>
-    <p class="mt-4 text-sm sm:text-base text-gray-600">
+    <p class="mt-4 text-base md:text-xl text-gray-600 font-light">
       Start free, grow your study power as you go.
     </p>
   </div>
