--- a/src/app/pages/home/features/features.html
+++ b/src/app/pages/home/features/features.html
@@ -1,76 +1,79 @@
 <!-- Main Container for Features Component -->
 <section class="bg-gray-50 py-12 sm:py-16 md:py-24">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-12">
-    <div class="mb-12 lg:mb-28 text-center">
-      <div class="flex flex-row items-center justify-center">
+    <div class="mb-12 lg:mb-28 text-center mx-auto max-w-xl">
+      <!-- <div class="flex flex-row items-center justify-center">
         <div class="rounded-full bg-prussian-blue-900 p-2 mr-4"></div>
         <p class="font-light text-lg sm:text-xl md:text-2xl leading-6 sm:leading-7 uppercase text-[#1D353E] mr-4">
           Features
         </p>
-      </div>
+      </div> -->
       <!-- Title -->
-      <h2 class="mx-auto mt-4 max-w-xl text-center font-normal text-2xl sm:text-3xl md:text-[40px] leading-snug md:leading-[48px] text-[#264653]">
+      <h2 class="mx-auto mt-4 max-w-xl text-center font-medium tracking-tighter text-2xl sm:text-3xl md:text-[40px] leading-snug md:leading-[48px] text-gray-800">
         Experience Smarter Learning, Designed for You
       </h2>
+      <p class="mt-4 text-base md:text-xl text-gray-600 font-light">
+        Learning gets easier when your materials finally make sense—Maestro makes that happen instantly.
+      </p>
     </div>
 
     <!-- Grid layout for feature cards -->
-    <div class="grid grid-cols-1 gap-y-10 sm:grid-cols-2 sm:gap-x-10 sm:gap-y-12 lg:gap-x-24">
+    <div class="grid grid-cols-1 gap-y-10 sm:grid-cols-2 sm:gap-x-10 sm:gap-y-12 md:mx-16">
       <!-- Feature 1 -->
-      <div class="flex items-start space-x-4 sm:space-x-6">
-        <div class="flex h-10 w-10 sm:h-12 sm:w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]">
+      <div class="flex flex-col items-start bg-prussian-blue-100 rounded-xl p-4 md:p-6">
+        <div class="flex h-10 w-10 my-2 sm:h-12 sm:w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]">
           <img src="images/material_comprehension.svg" />
         </div>
         <div>
-          <h3 class="text-lg sm:text-xl font-medium text-[#264653]">
+          <h3 class="my-2 text-lg sm:text-xl font-medium tracking-tighter text-gray-800">
             Easy Material Comprehension
           </h3>
-          <p class="mt-2 font-normal text-base sm:text-lg md:text-xl leading-relaxed text-[#595959]">
+          <p class="font-light text-base md:text-lg md:text-xl leading-relaxed text-[#595959]">
             Upload your PDFs and DOCX files, and let Maestro turn complex topics into easy lessons suited to your learning style.
           </p>
         </div>
       </div>
 
       <!-- Feature 2 -->
-      <div class="flex items-start space-x-4 sm:space-x-6">
-        <div class="flex h-10 w-10 sm:h-12 sm:w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]">
+      <div class="flex flex-col items-start bg-prussian-blue-100 rounded-xl p-4 md:p-6">
+        <div class="flex h-10 w-10 my-2 sm:h-12 sm:w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]">
           <img src="images/learning_paths.svg" />
         </div>
         <div>
-          <h3 class="text-lg sm:text-xl font-medium text-[#264653]">
+          <h3 class="my-2 text-lg sm:text-xl font-medium tracking-tighter text-gray-800">
             Tailored Learning Paths
           </h3>
-          <p class="mt-2 font-normal text-base sm:text-lg md:text-xl leading-relaxed text-[#595959]">
+          <p class="font-light text-base md:text-lg md:text-xl leading-relaxed text-[#595959]">
             Tell Maestro your learning style and your preferred complexity. Get content that resonates.
           </p>
         </div>
       </div>
 
       <!-- Feature 3 -->
-      <div class="flex items-start space-x-4 sm:space-x-6">
-        <div class="flex h-10 w-10 sm:h-12 sm:w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]">
+      <div class="flex flex-col items-start bg-prussian-blue-100 rounded-xl p-4 md:p-6">
+        <div class="flex h-10 w-10 my-2 sm:h-12 sm:w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]">
           <img src="images/summaries.svg" />
         </div>
         <div>
-          <h3 class="text-lg sm:text-xl font-medium text-[#264653]">
+          <h3 class="my-2 text-lg sm:text-xl font-medium tracking-tighter text-gray-800">
             Engaging Summaries & Notes
           </h3>
-          <p class="mt-2 font-normal text-base sm:text-lg md:text-xl leading-relaxed text-[#595959]">
+          <p class="font-light text-base md:text-lg md:text-xl leading-relaxed text-[#595959]">
             Forget endless highlighting. Maestro creates interactive summaries and notes to help you grasp key concepts quickly.
           </p>
         </div>
       </div>
 
       <!-- Feature 4 -->
-      <div class="flex items-start space-x-4 sm:space-x-6">
-        <div class="flex h-10 w-10 sm:h-12 sm:w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]">
+      <div class="flex flex-col items-start bg-prussian-blue-100 rounded-xl p-4 md:p-6">
+        <div class="flex h-10 w-10 my-2 sm:h-12 sm:w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]">
           <img src="images/exam.svg" />
         </div>
         <div>
-          <h3 class="text-lg sm:text-xl font-medium text-[#264653]">
+          <h3 class="my-2 text-lg sm:text-xl font-medium tracking-tighter text-gray-800">
             Practice & Exam Options
           </h3>
-          <p class="mt-2 font-normal text-base sm:text-lg md:text-xl leading-relaxed text-[#595959]">
+          <p class="font-light text-base md:text-lg md:text-xl leading-relaxed text-[#595959]">
             Challenge yourself with AI-driven quizzes and exams that adapt to your progress, pinpointing areas for improvement.
           </p>
         </div>
