bug fixes and landing page reversion

--- a/src/app/pages/dashboard/subjects/subjects.html
+++ b/src/app/pages/dashboard/subjects/subjects.html
@@ -76,7 +76,7 @@
       <a 
         href="https://forms.gle/y6B3ReSJXCstUAE89" 
         target="_blank"
-        class="absolute bottom-4 left-4 lg:bottom-8 lg:left-8 rounded-full bg-[var(--bg-card)] lg:hover:bg-[var(--bg-card-hover)] p-3 lg:p-4"
+        class="fixed shadow-lg bottom-4 left-4 lg:bottom-8 lg:left-8 rounded-full bg-[var(--bg-card)] lg:hover:bg-[var(--bg-card-hover)] p-3 lg:p-4"
       >
         <!-- <img src="images/feedback.png" alt="" class="w-6 lg:w-8">  -->
         <img src="images/chat-popup-icon.svg" alt="" class="w-6 lg:w-8"> 
