--- a/src/app/pages/subject-create/extension-config-overlay/extension-config-overlay.html
+++ b/src/app/pages/subject-create/extension-config-overlay/extension-config-overlay.html
@@ -31,7 +31,7 @@
               class="bg-[var(--bg-page)] p-2 border-b-2 border-[var(--text-primary-hover)] focus:border-[var(--text-primary)] focus:outline-none text-sm w-12 mx-4" 
               [(ngModel)]="config.exercise.numQuestions"
               min="1"
-              max="10"
+              [max]="constraints()?.exercise?.maxQuestions"
             >
           </div>
   
@@ -103,7 +103,7 @@
               class="bg-[var(--bg-page)] p-2 border-b-2 border-[var(--text-primary-hover)] focus:border-[var(--text-primary)] focus:outline-none text-sm w-12 mx-4" 
               [(ngModel)]="config.exam.numQuestions"
               min="1"
-              max="30"
+              [max]="constraints()?.exam.maxQuestions"
             >
           </div>
   
@@ -175,7 +175,7 @@
               class="bg-[var(--bg-page)] p-2 border-b-2 border-[var(--text-primary-hover)] focus:border-[var(--text-primary)] focus:outline-none text-sm w-12 mx-4" 
               [(ngModel)]="config.flashcards.numCards"
               min="1"
-              max="10"
+              [max]="constraints()?.flashcards.maxCards"
             >
           </div>
   
@@ -211,7 +211,7 @@
       </form>
     }
 
-    <button class="text-sm px-5 py-4 rounded-full bg-[var(--text-primary)] text-[var(--bg-page)] md:hover:bg-[var(--text-primary-hover)]" (click)="save()">
+    <button class="text-sm px-5 py-4 mt-4 md:mt-6 rounded-full bg-[var(--text-primary)] text-[var(--bg-page)] md:hover:bg-[var(--text-primary-hover)]" (click)="save()">
       Save Configuration
     </button>
   </div>
