--- a/src/app/pages/subject-create/extension-config-overlay/extension-config-overlay.html
+++ b/src/app/pages/subject-create/extension-config-overlay/extension-config-overlay.html
@@ -189,7 +189,7 @@
                   id="flashcard-basic" 
                   class="mx-2 my-1 accent-blue-900" 
                   value="basic" 
-                  [checked]="config.exam.types.includes('basic')" 
+                  [checked]="config.flashcards.types.includes('basic')" 
                   (change)="toggleType($event, 'flashcards')"
                 >
                 <label for="flashcard-basic">Basic</label>
@@ -200,7 +200,7 @@
                   id="flashcard-basic-reversed" 
                   class="mx-2 my-1 accent-blue-900" 
                   value="basic reversed" 
-                  [checked]="config.exam.types.includes('basic reversed')" 
+                  [checked]="config.flashcards.types.includes('basic reversed')" 
                   (change)="toggleType($event, 'flashcards')"
                 >
                 <label for="flashcard-basic-reversed">Basic (Reversed)</label>
@@ -211,7 +211,7 @@
       </form>
     }
 
-    <button class="text-sm px-5 py-4 mt-4 md:mt-6 rounded-full bg-[var(--text-primary)] text-[var(--bg-page)] md:hover:bg-[var(--text-primary-hover)]" (click)="save()">
+    <button class="text-sm px-5 py-4 mt-4 md:mt-4 rounded-full bg-[var(--text-primary)] text-[var(--bg-page)] md:hover:bg-[var(--text-primary-hover)]" (click)="save()">
       Save Configuration
     </button>
   </div>
