--- a/src/app/pages/lesson/sidebar/sidebar.html
+++ b/src/app/pages/lesson/sidebar/sidebar.html
@@ -42,6 +42,7 @@
         }
       }
     }
+
     <!-- Exam -->
     @if (content().exam) {
       <button [class]="`py-2 px-2 pl-8 text-[var(--text-secondary)] w-full text-left lg:hover:bg-[var(--bg-hover)] border-[var(--text-primary)] 
@@ -49,6 +50,15 @@
         ${!content().exam.score ? 'font-bold' : ''}`"
         (click)="selectView(content().exam.id, 'exam')">
         Exam
+      </button>
+    }
+
+    <!-- Glossary -->
+    @if (content().glossary) {
+      <button [class]="`py-2 px-2 pl-8 text-[var(--text-secondary)] w-full text-left lg:hover:bg-[var(--bg-hover)] border-[var(--text-primary)] 
+        ${(content().glossary.id === currentView().id && currentView().type === 'glossary') ? 'border-l-4' : ''}`"
+        (click)="selectView('glossary', 'glossary')">
+        Glossary
       </button>
     }
   </div>
