--- a/src/app/pages/lesson/lesson-page/lesson-page.html
+++ b/src/app/pages/lesson/lesson-page/lesson-page.html
@@ -85,6 +85,7 @@
       <app-glossary 
         class="w-full px-8 lg:pl-12"
         [glossaryItems]="subjectContent.glossary"
+        (scroll)="scrollToPosition($event)"
       ></app-glossary>
     }
   </div>
