--- a/src/app/pages/lesson/practice/practice.html
+++ b/src/app/pages/lesson/practice/practice.html
@@ -1,4 +1,8 @@
-<div class="py-4 w-full flex flex-col">
+<div 
+  #viewContainer
+  class="py-4 w-full flex flex-col 
+  px-8 lg:pl-12 min-h-0 flex-1 overflow-y-auto scrollbar-thin scrollbar-thumb-gray-400 lg:hover:scrollbar-thumb-gray-500"
+>
   <h1 class="mx-4 mt-4 text-2xl font-medium">
     Question {{getQuestionNumber()}}
   </h1>
