--- a/src/app/pages/lesson/subtopic/subtopic.html
+++ b/src/app/pages/lesson/subtopic/subtopic.html
@@ -1,4 +1,8 @@
-<div class="w-full flex flex-col">
+<div 
+  #viewContainer 
+  class="w-full flex flex-col 
+  px-8 lg:pl-12 min-h-0 flex-1 overflow-y-auto scrollbar-thin scrollbar-thumb-gray-400 lg:hover:scrollbar-thumb-gray-500"
+>
   <!-- Top Section -->
   <div class="flex flex-row justify-between lg:pt-4 lg:pb-2 sticky z-[9] top-0 bg-[var(--bg-page)]">
     <!-- Topic tree display -->
