--- a/src/app/pages/lesson/glossary/glossary.html
+++ b/src/app/pages/lesson/glossary/glossary.html
@@ -1,7 +1,7 @@
 <div class="relative pb-16 w-full">
   <h1 class="flex flex-row items-center my-6">
     <div class="rounded-full bg-[var(--bg-card)] p-3">
-      <img src="images/subject-icon.svg" alt="" class="w-6">
+      <app-theme-icon name="subject-icon" className="w-6" />
     </div>
     <span class="text-4xl font-medium mx-4">Glossary</span>
   </h1>
